--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -38,6 +38,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@vitest/coverage-v8": "latest",
     "@vitest/ui": "^2.1.8",
+    "concurrently": "latest",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -49,8 +50,7 @@
     "msw": "^2.10.2",
     "prettier": "^3.4.2",
     "vite": "npm:rolldown-vite@latest",
-    "vitest": "latest",
-    "concurrently": "latest"
+    "vitest": "latest"
   },
   "msw": {
     "workerDirectory": [
@@ -60,6 +60,8 @@
   "dependencies": {
     "compression": "^1.8.1",
     "express": "^5.1.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "sirv": "^3.0.1"
   }
 }
