--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript-eslint": "^8.36.0",
     "vite": "npm:rolldown-vite@latest",
     "vitest": "latest",
-    "concurrently": "latest"
+    "concurrently": "latest",
+    "nodemon": "^3.1.11"
   }
 }
