--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5173",
-    "dev:ssr": "cross-env PORT=5174 node server.js",
+    "dev:ssr": "cross-env PORT=5174 nodemon server.js",
     "build:client": "node -e \"const fs=require('fs');const path=require('path');const dist=path.join(process.cwd(),'dist','vanilla');if(fs.existsSync(dist))fs.rmSync(dist,{recursive:true,force:true});\" && vite build --outDir ./dist/vanilla && node -e \"const fs=require('fs');const path=require('path');const src=path.join(process.cwd(),'dist','vanilla','index.html');const dest=path.join(process.cwd(),'dist','vanilla','404.html');if(fs.existsSync(src))fs.copyFileSync(src,dest);\"",
     "build:client-for-ssg": "node -e \"const fs=require('fs');const path=require('path');const dist=path.join(process.cwd(),'..','..','dist','vanilla');if(fs.existsSync(dist))fs.rmSync(dist,{recursive:true,force:true});\" && vite build --outDir ../../dist/vanilla",
     "build:server": "vite build --outDir ./dist/vanilla-ssr --ssr src/main-server.js",
@@ -51,7 +51,8 @@
     "vite": "npm:rolldown-vite@latest",
     "vitest": "latest",
     "concurrently": "latest",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.11"
   },
   "msw": {
     "workerDirectory": [
