--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -8,7 +8,7 @@
     "dev:ssr": "PORT=5174 node server.js",
     "build:client": "rm -rf ./dist/vanilla && vite build --outDir ./dist/vanilla && cp ./dist/vanilla/index.html ./dist/vanilla/404.html",
     "build:client-for-ssg": "rm -rf ../../dist/vanilla && vite build --outDir ../../dist/vanilla",
-    "build:server": "vite build --outDir ./dist/vanilla-ssr --ssr src/main-server.js",
+    "build:server": "vite build --outDir ./dist/vanilla-ssr --ssr src/entry-server.js",
     "build:ssg": "pnpm run build:client-for-ssg && node static-site-generate.js",
     "build:without-ssg": "pnpm run build:client && pnpm run build:server",
     "build": "pnpm run build:client && pnpm run build:server && pnpm run build:ssg",
