--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5175",
-    "dev:ssr": "PORT=5176 node server.js",
+    "dev:ssr": "PORT=5176 nodemon server.js",
     "build:client": "rm -rf ./dist/react && vite build --outDir ./dist/react && cp ./dist/react/index.html ./dist/react/404.html",
     "build:client-for-ssg": "rm -rf ../../dist/react && vite build --outDir ../../dist/react",
     "build:server": "vite build --outDir ./dist/react-ssr --ssr src/main-server.tsx",
@@ -53,6 +53,7 @@
     "express": "^5.1.0",
     "compression": "^1.7.5",
     "sirv": "^3.0.0",
-    "concurrently": "latest"
+    "concurrently": "latest",
+    "nodemon": "^3.1.11"
   }
 }
