--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -16,7 +16,7 @@
     "prettier:write": "prettier --write ./src",
     "preview:csr": "vite preview --outDir ./dist/vanilla",
     "preview:csr-with-build": "pnpm run build:client && pnpm run preview:csr",
-    "preview:ssr": "cross-env PORT=4174 NODE_ENV=production node server.js",
+    "preview:ssr": "cross-env PORT=4174 NODE_ENV=production nodemon server.js",
     "preview:ssr-with-build": "pnpm run build:without-ssg && pnpm run preview:ssr",
     "preview:ssg": "vite preview --outDir ../../dist/vanilla --port 4178",
     "preview:ssg-with-build": "pnpm run build && pnpm run preview:ssg",
