--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5173",
-    "dev:ssr": "PORT=5174 node server.js",
+    "dev:ssr": "PORT=5174 nodemon server.js",
     "build:client": "rm -rf ./dist/vanilla && vite build --outDir ./dist/vanilla && cp ./dist/vanilla/index.html ./dist/vanilla/404.html",
     "build:client-for-ssg": "rm -rf ../../dist/vanilla && vite build --outDir ../../dist/vanilla",
-    "build:server": "vite build --outDir ./dist/vanilla-ssr --ssr src/main-server.js",
+    "build:server": "vite build --outDir ./dist/vanilla-ssr --ssr src/main-server.js && mkdir -p ./dist/vanilla-ssr/mocks && cp ./src/mocks/items.json ./dist/vanilla-ssr/mocks/",
     "build:ssg": "pnpm run build:client-for-ssg && node static-site-generate.js",
     "build:without-ssg": "pnpm run build:client && pnpm run build:server",
     "build": "pnpm run build:client && pnpm run build:server && pnpm run build:ssg",
@@ -47,6 +47,7 @@
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.11",
     "msw": "^2.10.2",
+    "nodemon": "^3.1.11",
     "prettier": "^3.4.2",
     "vite": "npm:rolldown-vite@latest",
     "vitest": "latest",
