--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
+      - name: Debug - Check commit hash
+        run: |
+          echo "CI에서 테스트하는 커밋: $(git rev-parse HEAD)"
+          echo "커밋 메시지: $(git log -1 --pretty=format:'%h - %s')"
       - uses: pnpm/action-setup@v4
         with:
           version: latest
@@ -41,6 +45,10 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
+      - name: Debug - Check commit hash
+        run: |
+          echo "CI에서 테스트하는 커밋: $(git rev-parse HEAD)"
+          echo "커밋 메시지: $(git log -1 --pretty=format:'%h - %s')"
       - uses: pnpm/action-setup@v4
         with:
           version: latest
