--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,31 +28,32 @@
     "prettier:write": "prettier --write ./src"
   },
   "dependencies": {
+    "@hanghae-plus/lib": "workspace:*",
     "react": "latest",
-    "react-dom": "latest",
-    "@hanghae-plus/lib": "workspace:*"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@babel/core": "latest",
     "@babel/plugin-transform-react-jsx": "latest",
     "@eslint/js": "^9.16.0",
+    "@types/node": "^24.0.13",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/use-sync-external-store": "latest",
     "@vitejs/plugin-react": "latest",
-    "@types/node": "^24.0.13",
+    "compression": "^1.7.5",
+    "concurrently": "latest",
     "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "msw": "^2.10.2",
-    "prettier": "^3.4.2",
-    "typescript": "^5.8.3",
-    "vite": "npm:rolldown-vite@latest",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "express": "^5.1.0",
-    "compression": "^1.7.5",
+    "msw": "^2.10.2",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.4.2",
     "sirv": "^3.0.0",
-    "concurrently": "latest"
+    "typescript": "^5.8.3",
+    "vite": "npm:rolldown-vite@latest"
   }
 }
