--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,35 @@ jobs:
       - name: Build
         run: pnpm run build
 
+      # 루트 index.html 생성 (vanilla로 리다이렉트)
+      - name: Create root index.html
+        run: |
+          mkdir -p dist
+          cat > dist/index.html << 'EOF'
+          <!DOCTYPE html>
+          <html>
+          <head>
+            <meta charset="UTF-8">
+            <title>프로젝트 선택</title>
+            <style>
+              body { font-family: Arial, sans-serif; padding: 50px; text-align: center; }
+              h1 { margin-bottom: 30px; }
+              a { display: inline-block; margin: 10px; padding: 15px 30px; background: #007bff; color: white; text-decoration: none; border-radius: 5px; }
+              a:hover { background: #0056b3; }
+            </style>
+          </head>
+          <body>
+            <h1>프로젝트 선택</h1>
+            <a href="/front_7th_chapter4-1/vanilla/">Vanilla SSR</a>
+            <a href="/front_7th_chapter4-1/react/">React SSR</a>
+          </body>
+          </html>
+          EOF
+
       # 404.html 생성 - SPA 라우팅 지원
       - name: Create 404.html for SPA routing
         run: |
+          cp dist/index.html dist/404.html
           if [ -f dist/vanilla/index.html ]; then
             cp dist/vanilla/index.html dist/vanilla/404.html
           fi
