--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:report": "npx playwright show-report",
     "prepare": "husky",
-    "gh-pages": "pnpm run build && gh-pages -d dist"
+    "build:ssg": "pnpm -F @hanghae-plus/shopping-vanilla build:ssg && pnpm -F @hanghae-plus/shopping-react build:ssg",
+    "deploy": "pnpm run build:ssg && cp index.html dist/ && gh-pages -d dist"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
