--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,20 +8,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5175",
-    "dev:ssr": "PORT=5176 node server.js",
-    "build:client": "rm -rf ./dist/react && vite build --outDir ./dist/react && cp ./dist/react/index.html ./dist/react/404.html",
-    "build:client-for-ssg": "rm -rf ../../dist/react && vite build --outDir ../../dist/react",
+    "dev:ssr": "cross-env PORT=5176 node server.js",
+    "build:client": "rimraf ./dist/react && vite build --outDir ./dist/react && shx cp ./dist/react/index.html ./dist/react/404.html",
+    "build:client-for-ssg": "rimraf ../../dist/react && vite build --outDir ../../dist/react",
     "build:server": "vite build --outDir ./dist/react-ssr --ssr src/main-server.tsx",
     "build:without-ssg": "pnpm run build:client && npm run build:server",
-    "build:ssg": "pnpm run build:client-for-ssg && NODE_ENV=production node static-site-generate.js",
+    "build:ssg": "pnpm run build:client-for-ssg && cross-env NODE_ENV=production node static-site-generate.js",
     "build": "npm run build:client && npm run build:server && npm run build:ssg",
     "preview:csr": "vite preview --outDir ./dist/react --port 4175",
     "preview:csr-with-build": "pnpm run build:client && pnpm run preview:csr",
-    "preview:ssr": "PORT=4176 NODE_ENV=production node server.js",
+    "preview:ssr": "cross-env PORT=4176 NODE_ENV=production node server.js",
     "preview:ssr-with-build": "pnpm run build:without-ssg && pnpm run preview:ssr",
-    "preview:ssg": "NODE_ENV=production vite preview --outDir ../../dist/react --port 4179",
+    "preview:ssg": "cross-env NODE_ENV=production vite preview --outDir ../../dist/react --port 4179",
     "preview:ssg-with-build": "pnpm run build:ssg && pnpm run preview:ssg",
-    "serve:test": "pnpm run build:without-ssg && pnpm run build:ssg && (pnpm run dev & pnpm run dev:ssr & pnpm run preview:csr & pnpm run preview:ssr & pnpm run preview:ssg)",
+    "serve:test": "pnpm run build:without-ssg && pnpm run build:ssg && concurrently \"pnpm run dev\" \"pnpm run dev:ssr\" \"pnpm run preview:csr\" \"pnpm run preview:ssr\" \"pnpm run preview:ssg\"",
     "tsc": "tsc --noEmit",
     "lint:fix": "eslint --fix ./src",
     "prettier:write": "prettier --write ./src"
