fix: deploy.yml 커맨드 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build Vanilla SSG
-        run: pnpm -F @hanghae-plus/shopping-vanilla run build:ssg
+      - name: Build Vanilla
+        run: pnpm -F @hanghae-plus/shopping-vanilla run build
 
-      - name: Build React SSG
-        run: pnpm -F @hanghae-plus/shopping-react run build:ssg
+      - name: Build React
+        run: pnpm -F @hanghae-plus/shopping-react run build
 
       - name: Prepare deployment
         run: |
