--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,9 +11,9 @@
     "dev:ssr": "PORT=5176 node server.js",
     "build:client": "rm -rf ./dist/react && vite build --outDir ./dist/react && cp ./dist/react/index.html ./dist/react/404.html",
     "build:client-for-ssg": "rm -rf ../../dist/react && vite build --outDir ../../dist/react",
-    "build:server": "vite build --outDir ./dist/react-ssr --ssr src/main-server.tsx",
+    "build:server": "vite build --outDir ./dist/react-ssr --ssr src/main-server.tsx && vite build --outDir ./dist/react-ssr/mocks --ssr src/mocks/node.ts",
     "build:without-ssg": "pnpm run build:client && npm run build:server",
-    "build:ssg": "pnpm run build:client-for-ssg && node static-site-generate.js",
+    "build:ssg": "pnpm run build:client-for-ssg && node scripts/ssg.js",
     "build": "npm run build:client && npm run build:server && npm run build:ssg",
     "preview:csr": "vite preview --outDir ./dist/react --port 4175",
     "preview:csr-with-build": "pnpm run build:client && pnpm run preview:csr",
